--- a/index.html
+++ b/index.html
@@ -7,7 +7,30 @@
     <body>
         <!-- navigation -->
         <header>
-            <h1>RUN BUDDY</h1>
+            <!-- Clickable Header -->
+            <h1>
+                <a href="/">RUN BUDDY</a>
+            </h1>
+            <!-- Navigation Buttons -->
+            <nav>
+                <!--unordered list element -->
+                <ul>
+                    <!-- List item element -->
+                    <li>
+                        <!-- anchor element -->
+                        <a href="#what-we-do">What We Do</a>
+                    </li>
+                    <li>
+                        <a href="#what-you-do">What You Do</a>
+                    </li>
+                    <li>
+                        <a href="#your-trainers">Your Trainers</a>
+                    </li>
+                    <li>
+                        <a href="#reach-out">Reach Out</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
 
         <!-- hero/jumbotron-->
@@ -38,6 +61,6 @@
         <footer>
             <h2>❤️ Made with love by Run Buddy.</h2>
         </footer>
-        
+
     </body>
 </html>
