fixed recent push

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="UTF-8"/>
         <title>Run Buddy</title>
     </head>
+    <!-- CSS file -->
+    <link rel="stylesheet" href="./assets/css/run-buddy-style.css"/>
+
     <body>
         <!-- navigation -->
         <header>
