--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <!-- Clickable Header -->
             <h1>
-                <a href="/">RUN BUDDY</a>
+                <a href="index.html">RUN BUDDY</a>
             </h1>
             <!-- Navigation Buttons -->
             <nav>
@@ -37,7 +37,42 @@
         </header>
 
         <!-- hero/jumbotron-->
-        <section>
+        <section class="hero">
+            <div class="hero-form">
+                <h3>Get Started Today</h3>
+                <p>Fill out this form and one of our trainers will schedule a consult</p>
+                <!-- Form element -->
+                <form>
+                    <!-- Name box -->
+                    <label for="name">Enter full name:</label>
+                    <input type="text" placeholder="Your Name" name="name" id="name" class="form-input"/>
+                    <!-- Email box -->
+                    <label for="email">Enter email address:</label>
+                    <input type="email" placeholder="Email Address" name="email" id="email" class="form-input"/>
+                    <!-- Phone box -->
+                    <label for="phone">Enter a phone number:</label>
+                    <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input"/>
+                    <!-- Yes/No box -->
+                    <p>
+                        Have you worked out with a trainer before?
+                        <input type="radio" name="trainer-confirm" id="trainer-yes"/>
+                        <label for="trainer-yes">Yes</label>
+                        <input type="radio" name="trainer-confirm" id="trainer-no"/>
+                        <label for="trainer-no">No</label>
+                    </p>
+                    <!-- Checkbox element -->
+                    <p>
+                        <label for="18-check">
+                            I acknowledge that I am at least 18 years of age.
+                        </label>
+                        <input type="checkbox" name="18-confirm" id="18-check"/>  
+                    </p>
+                    <!-- Button -->
+                    <button type="submit">
+                        Get Running!
+                    </button>
+                </form>
+            </div>
         </section>
 
         <!-- "what we do" section-->
