add flexbox to section title

--- a/index.html
+++ b/index.html
@@ -84,14 +84,19 @@
 
         <!-- "what we do" section-->
         <section id="what-we-do" class="intro">
+          <div class="flex-row">
             <h2 class="section-title primary-border">What We Do</h2>
-            <p>
+            <div class="flex-row">
+              <p>
                 butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
-            </p>
+              </p>
+            </div>
+          </div>
         </section>
 
         <!-- "what You do" section-->
         <section id="what-you-do" class="steps">
+          <div class="flex-row">
             <h2 class="section-title secondary-border">What You Do</h2>
 
             <div>
@@ -117,10 +122,12 @@
                 <h3>Step 4: <span>See Results.</span></h3>
                 <p>Bi-weekly checkins with your trainer will keep you focused</p>
             </div>
+          </div>
         </section>
 
         <!-- "trainers" section-->
         <section id="your-trainers" class="trainers">
+          <div class="flex-row">
             <h2 class="section-title primary-border">
                 Meet The Trainers
             </h2>
@@ -162,12 +169,14 @@
                       itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
                   </p>
                 </div>
-              </article>
+            </article>
+          </div>
         </section>
 
 
         <!-- "reach out" section-->
         <section id="reach-out" class="contact">
+          <div class="flex-row">
             <h2 class="section-title secondary-border">Reach Out</h2>
             <div class="contact-info">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5290.9684425609885!2d-120.42407374392067!3d37.95311681523557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c46e315aaf1b%3A0xb32d2fcd2023b726!2sMain%20St%2C%20Jamestown%2C%20CA%2095327!5e0!3m2!1sen!2sus!4v1629854662568!5m2!1sen!2sus"
@@ -205,6 +214,7 @@
                     </address>
                 </div>
             </div>
+          </div>
         </section>
 
         <!-- footer-->
