add flexbox to the steps

--- a/index.html
+++ b/index.html
@@ -97,31 +97,61 @@
         <!-- "what You do" section-->
         <section id="what-you-do" class="steps">
           <div class="flex-row">
-            <h2 class="section-title secondary-border">What You Do</h2>
+            <h2 class="section-title secondary-border">
+              What You Do
+            </h2>
+          </div>
 
-            <div>
+          <div class="step">
+            <h3>Step 1.</h3>
+            <div class="step-info">
+              <div class="step-img">
                 <img src="./assets/images/step-1.svg" alt=""/>
-                <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
+              </div>
+              <div class="step-text">
+                <h4>Fill Out the Form Above</h4>
                 <p>You're already here, so why not?</p>
-            </div>
+              </div>
+            </div>  
+          </div>
 
-            <div>
+          <div class="step">
+            <h3>Step 2.</h3>
+            <div class="step-info">
+              <div class="step-img">
                 <img src="./assets/images/step-2.svg" alt=""/>
-                <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
+              </div>
+              <div class="step-text">
+                <h4>Consult with One of Our Trainers.</h4>
                 <p>Are you here to build muscle, lose weight, or just feel good?</p>
-            </div>
-            
-            <div>
+              </div>
+            </div>  
+          </div>
+
+          <div class="step">
+            <h3>Step 3.</h3>
+            <div class="step-info">
+              <div class="step-img">
                 <img src="./assets/images/step-3.svg" alt=""/>
-                <h3>Step 3: <span>Get Running.</span></h3>
+              </div>
+              <div class="step-text">
+                <h4>Get Running.</h4>
                 <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
-            </div>
-            
-            <div>
+              </div>
+            </div>  
+          </div>
+
+          <div class="step">
+            <h3>Step 4.</h3>
+            <div class="step-info">
+              <div class="step-img">
                 <img src="./assets/images/step-4.svg" alt=""/>
-                <h3>Step 4: <span>See Results.</span></h3>
+              </div>
+              <div class="step-text">
+                <h4>See Results.</h4>
                 <p>Bi-weekly checkins with your trainer will keep you focused</p>
-            </div>
+              </div>
+            </div>  
           </div>
         </section>
 
@@ -131,46 +161,46 @@
             <h2 class="section-title primary-border">
                 Meet The Trainers
             </h2>
-
-            <!-- first trainer bio -->
-            <article class="trainer">
-                <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
-                <div class="trainer-bio text-left">
-                    <h3>Arron Stephens</h3>
-                    <h4>Speed / Strength</h4>
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-                        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!  
-                    </p>
-                </div>
-            </article>
-
-            <!-- second trainer bio-->
-            <article class="trainer">
-                <div class="trainer-bio text-right">
-                    <h3>Joanna Gill</h3>
-                    <h4>Endurance</h4>
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-                        itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!  
-                    </p>
-                </div>
-                <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
-            </article>
-
-            <!-- third trainer bio -->
-            <article class="trainer">
-                <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-                <div class="trainer-bio text-left">
-                  <h3>Harry "the Headband" Smith</h3>
-                  <h4>Strength</h4>
-                  <p>
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
-                      itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
-                  </p>
-                </div>
-            </article>
           </div>
+
+          <!-- first trainer bio -->
+          <article class="trainer">
+            <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
+              <div class="trainer-bio text-left">
+                <h3>Arron Stephens</h3>
+                <h4>Speed / Strength</h4>
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                  itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!  
+                </p>
+              </div>
+          </article>
+
+          <!-- second trainer bio-->
+          <article class="trainer">
+            <div class="trainer-bio text-right">
+              <h3>Joanna Gill</h3>
+              <h4>Endurance</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!  
+              </p>
+            </div>
+            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
+          </article>
+
+          <!-- third trainer bio -->
+          <article class="trainer">
+            <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+            <div class="trainer-bio text-left">
+              <h3>Harry "the Headband" Smith</h3>
+              <h4>Strength</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa sed
+                itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+              </p>
+            </div>
+          </article>
         </section>
 
 
@@ -178,41 +208,42 @@
         <section id="reach-out" class="contact">
           <div class="flex-row">
             <h2 class="section-title secondary-border">Reach Out</h2>
-            <div class="contact-info">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5290.9684425609885!2d-120.42407374392067!3d37.95311681523557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c46e315aaf1b%3A0xb32d2fcd2023b726!2sMain%20St%2C%20Jamestown%2C%20CA%2095327!5e0!3m2!1sen!2sus!4v1629854662568!5m2!1sen!2sus"
-                style="border:0;"
-                allowfullscreen=""
-                loading="lazy">
-                </iframe>
+          </div>
 
-                <div class="contact-form">
-                  <h3>Contact Us</h3>
-                  <form>
-                    <label for="contact-name">Your Name</label>
-                    <input type="text" id="contact-name" placeholder="Your Name" />
+          <div class="contact-info">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5290.9684425609885!2d-120.42407374392067!3d37.95311681523557!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c46e315aaf1b%3A0xb32d2fcd2023b726!2sMain%20St%2C%20Jamestown%2C%20CA%2095327!5e0!3m2!1sen!2sus!4v1629854662568!5m2!1sen!2sus"
+              style="border:0;"
+              allowfullscreen=""
+              loading="lazy">
+            </iframe>
 
-                    <label for="contact-message">Message</label>
-                    <textarea id="contact-message" placeholder="Message"></textarea>
+            <div class="contact-form">
+              <h3>Contact Us</h3>
+              <form>
+                <label for="contact-name">Your Name</label>
+                <input type="text" id="contact-name" placeholder="Your Name" />
 
-                    <button type="submit">Submit</button>
-                  </form>
-                </div>
+                <label for="contact-message">Message</label>
+                <textarea id="contact-message" placeholder="Message"></textarea>
 
-                <div>
-                    <h3>Run Buddy</h3>
-                    <p>
-                        Any questions or concerns before signing up?
-                        <br />
-                        Let us know and we'll be happy to talk to you!
-                    </p>
-                    <address>
-                        55 Main Street <br/>
-                        Jamestown, Ca <br/>
-                        95327<br />
-                        P: 555.RUN.BUDZ (555.786.2839)<br/>
-                        E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-                    </address>
-                </div>
+                <button type="submit">Submit</button>
+              </form>
+            </div>
+
+            <div>
+              <h3>Run Buddy</h3>
+              <p>
+                Any questions or concerns before signing up?
+                <br />
+                Let us know and we'll be happy to talk to you!
+              </p>
+              <address>
+                55 Main Street <br/>
+                Jamestown, Ca <br/>
+                95327<br />
+                P: 555.RUN.BUDZ (555.786.2839)<br/>
+                E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+              </address>
             </div>
           </div>
         </section>
