--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
         <!-- "what we do" section-->
         <section id="what-we-do" class="intro">
           <div class="flex-row">
-            <h2 class="section-title primary-border">What We Do</h2>
+            <h2 class="section-title primary-border">
+              What We Do
+            </h2>
+          </div>
             <div class="flex-row">
               <p>
                 butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
@@ -160,7 +163,7 @@
         <section id="your-trainers">
           <div class="flex-row">
             <h2 class="section-title primary-border">
-                Meet The Trainers
+              Meet The Trainers
             </h2>
           </div>
 
